<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="zip">650-555-5555</string>
    <string name="address1">2465 Latham Street, 1st Floor</string>
    <string name="address2">Mountain View, CA 94043</string>
    <string name="address3">USA</string>
    <string name="hear">Hear more about us from our students!</string>
</resources>
